--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     color: black; /* Color of the square */
     display: inline-block; /* Ensures it sits nicely beside text */
     width: 0.5em; /* Smaller width for the square */
-    margin-right: 13px; /* Space between square and text */
+    margin-right: 15px; /* Space between square and text */
     font-size: 0.5em; /* Adjusted size of the square */
     vertical-align: middle; /* Aligns the square with the text */
 } 
@@ -145,7 +145,7 @@ function copy(dest, source) {
 
 <!-- <div class="container"> -->
 <p>
-I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant. Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
+II am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant. Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
 <br>
 <br>
 I am mainly interested in probability and PDEs, specifically their connections to statistical mechanics. <!--I particularly  like problems that are multiscale and/or dynamical in nature.-->
