--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
 	<link rel="icon" type="image/png" href="images/CourantLogo.png">
 
+	<meta name="google-site-verification" content="3RR8_Y3o_GjhtFjO3lsHjEkdFHdLgnz0QnXw8Xshc5Q" />
 </head>
 
 <!-- code for button colors-->
